feat(56): final documentation
